--- a/index.html
+++ b/index.html
@@ -1,52 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<style>
-			.fa-star {
-			  margin: 0.5em;
-			  font-size: 24px;
-			}
-			
-			span {
-			  display: inline-block;
-			  margin: 0.5em;
-			  text-align: center;
-			  background-color: #ccc;
-			  width: 24px;
-			  border-radius: 50%;
-			  cursor: pointer;  
-			}
-			
-			.selected {
-			  background-color: #eee;
-			  color: #ddd;
-				cursor: not-allowed;  
-			}
-			
-			.used {
-			  background-color: #aaddaa;
-			  color: #99bb99;
-				cursor: not-allowed;  
-			}
-		</style>
+		<link rel="stylesheet" href="StarsCount.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore-min.js"></script>
 		<script src="https://unpkg.com/react@15/dist/react.min.js"></script>
 		<script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
 		<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 		<meta charset="ISO-8859-1">
-		<title>Insert title here</title>
+		<title>Stars Count Game</title>
 	</head>
 	<body>
 		<div id="app"></div>
